--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,13 @@
 name: CI
 on:
     push:
-        branches: [ master ]
+        branches: [ main ]
 jobs:
     deploy:
         runs-on: self-hosted
         strategy: 
           matrix:
-            node-version: [12.x]
+            node-version: [16.x]
             
         steps:
           - uses: actions/checkout@v2
