--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,17 @@ on:
     push:
         branches: [ main ]
 jobs:
+    create_env_file_job:
+        runs-on: self-hosted
+        steps:
+          - name: Create .env file
+            uses: ozaytsev86/create-env-file@v1
+            with:
+              ENV_PORT: ${{ secrets.PORT }}
+              ENV_SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
+              ENV_JWT_SECRET: ${{ secrets.JWT_SECRET }}
+              ENV_MONGODB_URL: ${{ secrets.MONGODB_URL }}
+          
     deploy:
         runs-on: self-hosted
         strategy: 
