--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,5 +28,5 @@ jobs:
             with:
               node-version: ${{ matrix.node-version }}
           - run: npm install
-          - run: npm run dev --if-present
+          - run: npm run start --if-present
           - run: npm test
