--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,31 +1,31 @@
 name: CI
-
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
+    push:
+        branches: [ main ]
 jobs:
-  build:
-
-    runs-on: self-hosted
-
-    strategy:
-      matrix:
-        node-version: [ 19.x]
-
-    steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-      - run: npm i
-      - run: npm run start --if-present
-      - run: npm test
-      - env:
-          PORT: ${{ secrets.PORT }}
-          SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
-          JWT_SECRET: ${{ secrets.JWT_SECRET }}
-          MONGODB_URL: ${{ secrets.MONGODB_URL }}
+    create_env_file_job:
+        runs-on: self-hosted
+        steps:
+          - name: Create .env file
+            uses: ozaytsev86/create-env-file@v1
+            with:
+              ENV_PORT: ${{ secrets.PORT }}
+              ENV_SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
+              ENV_JWT_SECRET: ${{ secrets.JWT_SECRET }}
+              ENV_MONGODB_URL: ${{ secrets.MONGODB_URL }}
+          
+    deploy:
+        runs-on: self-hosted
+        strategy: 
+          matrix:
+            node-version: [16.x]
+            
+        steps:
+          - uses: actions/checkout@v2
+          - name: Use Node.js ${{ matrix.node-version }}
+            uses: actions/setup-node@v1
+            with:
+              node-version: ${{ matrix.node-version }}
+          - run: npm install
+          - run: npm run dev --if-present
+          - run: npm test
