--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,18 +2,7 @@ name: CI
 on:
     push:
         branches: [ main ]
-jobs:
-    create_env_file_job:
-        runs-on: self-hosted
-        steps:
-          - name: Create .env file
-            uses: ozaytsev86/create-env-file@v1
-            with:
-              ENV_PORT: ${{ secrets.PORT }}
-              ENV_SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
-              ENV_JWT_SECRET: ${{ secrets.JWT_SECRET }}
-              ENV_MONGODB_URL: ${{ secrets.MONGODB_URL }}
-          
+jobs:     
     deploy:
         runs-on: self-hosted
         strategy: 
@@ -27,5 +16,5 @@ jobs:
             with:
               node-version: ${{ matrix.node-version }}
           - run: npm install
-          - run: npm run dev --if-present
+          - run: npm run start --if-present
           - run: npm test
