--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
           - run: npm install
           - run: npm run start --if-present
           - run: npm test
-          - env:
+            env:
               PORT: ${{ secrets.PORT }}
               SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
               JWT_SECRET: ${{ secrets.JWT_SECRET }}
