--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
               SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
               JWT_SECRET: ${{ secrets.JWT_SECRET }}
               MONGODB_URL: ${{ secrets.MONGODB_URL }}
-          - run: echo "${{ secrets.MONBODB_URL }}"
+          - run: echo "${{ secrets.PORT }}"
           - run: npm install
           - run: npm run start --if-present
           - run: npm test
