trying to create .env

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,13 +17,23 @@ jobs:
             with:
               node-version: ${{ matrix.node-version }}
             
-          - run: echo "${{ secrets.PORT }}"
+          #- run: echo "${{ secrets.PORT }}"
           - run: npm install
+          - run: |
+              mkdir config
+              touch config/dev.env
+              echo PORT: ${{ secrets.PORT }} >> config/dev.env
+              echo SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }} >> config/dev.env
+              echo JWT_SECRET: ${{ secrets.JWT_SECRET }} >> config/dev.env
+              echo MONGODB_URL: ${{ secrets.MONGODB_URL }} >> config/dev.env 
+          - run: |
+              cat config/dev.env
           - run: npm run start --if-present
-            env:
-              PORT: ${{ secrets.PORT }}
-              SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
-              JWT_SECRET: ${{ secrets.JWT_SECRET }}
-              MONGODB_URL: ${{ secrets.MONGODB_URL }}
-          - run: npm test
+
+          #  env:
+          #    PORT: ${{ secrets.PORT }}
+          #    SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
+          #    JWT_SECRET: ${{ secrets.JWT_SECRET }}
+          #    MONGODB_URL: ${{ secrets.MONGODB_URL }}
+          # - run: npm test
             
