--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
               echo MONGODB_URL: ${{ secrets.MONGODB_URL }} >> config/dev.env 
           - run: |
               cat config/dev.env
-          - run: npm run start --if-present
+          - run: npm run dev --if-present
 
           #  env:
           #    PORT: ${{ secrets.PORT }}
