--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on: [push]
 jobs:
   pm2-configuration:
     #runner, This job will be running in runner with Ubuntu Server latest version.
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - uses: actions/checkout@v3 #checkout code from repository, so we code downloaded in runner.
       - uses: actions/setup-node@v3 #setup nodejs in our runner
@@ -16,12 +16,11 @@ jobs:
       - run: pm2 list #check pm2 list
       #running pm2 in mode cluster and --watch set to auto restart if index.js have changes.
       - run: pm2 start src/index.js --watch -i max
-  
   deploy:
     runs-on: self-hosted
     strategy: 
       matrix:
-      node-version: [16.x]
+        node-version: [16.x]
             
       steps:
         - uses: actions/checkout@v2
