--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,37 +16,37 @@ jobs:
       - run: pm2 list #check pm2 list
       #running pm2 in mode cluster and --watch set to auto restart if index.js have changes.
       - run: pm2 start src/index.js --watch -i max
-  deploy:
-    runs-on: self-hosted
-    strategy: 
-      matrix:
-        node-version: [16.x]
+#   deploy:
+#     runs-on: self-hosted
+#     strategy: 
+#       matrix:
+#         node-version: [16.x]
             
-      steps:
-        - uses: actions/checkout@v2
-        - name: Use Node.js ${{ matrix.node-version }}
-          uses: actions/setup-node@v1
-          with:
-            node-version: ${{ matrix.node-version }}
+#       steps:
+#         - uses: actions/checkout@v2
+#         - name: Use Node.js ${{ matrix.node-version }}
+#           uses: actions/setup-node@v1
+#           with:
+#             node-version: ${{ matrix.node-version }}
             
-        #- run: echo "${{ secrets.PORT }}"
-        - run: npm install
-        - run: |
-            mkdir config
-            touch config/dev.env
-            echo PORT: ${{ secrets.PORT }} >> config/dev.env
+#         #- run: echo "${{ secrets.PORT }}"
+#         - run: npm install
+#         - run: |
+#             mkdir config
+#             touch config/dev.env
+#             echo PORT: ${{ secrets.PORT }} >> config/dev.env
 
-          # echo SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }} >> config/dev.env
-          #   echo JWT_SECRET: ${{ secrets.JWT_SECRET }} >> config/dev.env
-          #   echo MONGODB_URL: ${{ secrets.MONGODB_URL }} >> config/dev.env 
-        - run: |
-            cat config/dev.env
-        - run: npm run dev --if-present
+#           # echo SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }} >> config/dev.env
+#           #   echo JWT_SECRET: ${{ secrets.JWT_SECRET }} >> config/dev.env
+#           #   echo MONGODB_URL: ${{ secrets.MONGODB_URL }} >> config/dev.env 
+#         - run: |
+#             cat config/dev.env
+#         - run: npm run dev --if-present
 
-#           #  env:
-#           #    PORT: ${{ secrets.PORT }}
-#           #    SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
-#           #    JWT_SECRET: ${{ secrets.JWT_SECRET }}
-#           #    MONGODB_URL: ${{ secrets.MONGODB_URL }}
-#           # - run: npm test
+# #           #  env:
+# #           #    PORT: ${{ secrets.PORT }}
+# #           #    SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
+# #           #    JWT_SECRET: ${{ secrets.JWT_SECRET }}
+# #           #    MONGODB_URL: ${{ secrets.MONGODB_URL }}
+# #           # - run: npm test
             
