--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,9 +14,8 @@ jobs:
       - run: npm install pm2@latest -g #install pm2 global
       - run: pm2 -V #check pm2 version
       - run: pm2 list #check pm2 list
-      #running pm2 in mode cluster and --watch set to auto restart if index.js have changes.
       - run: npm install
-      - run: pm2 start src/index.js --watch -i max
+      - run: pm2 start src/index.js -i max
 #   deploy:
 #     runs-on: self-hosted
 #     strategy: 
