--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "env-cmd -f ./config/dev.env nodemon src/index.js",
+    "dev-live": "env-cmd -f ./config/dev.env node src/index.js",
     "test": "env-cmd -f ./config/test.env jest --watch --detectOpenHandles --runInBand"
   },
   "jest": {
