--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,6 @@ jobs:
     #runner, This job will be running in runner with Ubuntu Server latest version.
     runs-on: self-hosted
     steps:
-      - run: cd /Users/pedrocorreia/desktop/
       - uses: actions/checkout@v3 #checkout code from repository, so we code downloaded in runner.
       - uses: actions/setup-node@v3 #setup nodejs in our runner
       - run: npm install pm2@latest -g #install pm2 global
@@ -26,6 +25,7 @@ jobs:
       - run: |
           cat config/dev.env
       - run: pm2 start pm2.config.js
+      working-directory: /Users/pedrocorreia/Desktop
 #   deploy:
 #     runs-on: self-hosted
 #     strategy: 
