change github_workspace variable

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,10 @@ name: "simple workflow pm2 configuration"
 #event, trigger action that running our Jobs.
 #In this file we trigger pm2-configuration every we push code to repository.
 on: [push]
+
+env:
+  GITHUB_WORKSPACE: /Users/pedrocorreia/Desktop/runner/task-manager/
+
 jobs:
   pm2-configuration:
     #runner, This job will be running in runner with Ubuntu Server latest version.
