change workspace for checkout

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,9 @@ jobs:
     #runner, This job will be running in runner with Ubuntu Server latest version.
     runs-on: self-hosted
     steps:
-      - uses: actions/checkout@v3 #checkout code from repository, so we code downloaded in runner.
+      - uses: actions/checkout@v3
+        with:
+          GITHUB_WORKSPACE: /Users/pedrocorreia/Desktop/runner/task-manager/ #checkout code from repository, so we code downloaded in runner.
       - uses: actions/setup-node@v3 #setup nodejs in our runner
       - run: npm install pm2@latest -g #install pm2 global
       - run: pm2 -V #check pm2 version
