--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "env-cmd -f ./config/dev.env nodemon src/index.js",
-    "dev-live": "env-cmd -f ./config/dev.env node src/index.js",
     "test": "env-cmd -f ./config/test.env jest --watch --detectOpenHandles --runInBand"
   },
   "jest": {
@@ -19,18 +18,12 @@
     "@sendgrid/mail": "^7.7.0",
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
-    "express-prom-bundle": "^6.6.0",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.2",
     "multer": "^1.4.5-lts.1",
-    "pm2": "^5.3.0",
-    "prom-client": "^14.2.0",
     "sharp": "^0.31.3",
-    "validator": "^13.9.0",
-    "winston": "^3.8.2",
-    "winston-daily-rotate-file": "^4.7.1",
-    "winston-loki": "^6.0.6"
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
