--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,9 +16,9 @@ jobs:
           mkdir config
           touch config/test.env
           echo PORT: ${{ secrets.PORT }} >> config/test.env
-          echo SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }} >> config/dev.env
-          echo JWT_SECRET: ${{ secrets.JWT_SECRET }} >> config/dev.env
-          echo MONGODB_URL: ${{ secrets.MONGODB_URL }} >> config/dev.env
+          echo SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }} >> config/test.env
+          echo JWT_SECRET: ${{ secrets.JWT_SECRET }} >> config/test.env
+          echo MONGODB_URL: ${{ secrets.MONGODB_URL }} >> config/test.env
       - run: |
           cat config/test.env
       - run: npm run action-test
