--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,9 +5,10 @@ name: 'test run'
 #In this file we trigger pm2-configuration every we push code to repository.
 on: [push]
 jobs:
-  test:
-    #runner, This job will be running in runner with Ubuntu Server latest version.
+  build-and-test:
+    name: 'Build and Test'
     runs-on: self-hosted
+
     steps:
       - uses: actions/checkout@v3 #checkout code from repository, so we code downloaded in runner.
       - uses: actions/setup-node@v3 #setup nodejs in our runner
@@ -22,3 +23,27 @@ jobs:
       - run: |
           cat config/test.env
       - run: npm run action-test
+      - name: Upload Test Results
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: Test Results
+          path: 'test-results/**/*.xml'
+
+  publish-test-results:
+    name: 'Publish Tests Results'
+    needs: build-and-test
+    runs-on: self-hosted
+    # the build-and-test job might be skipped, we don't need to run this job then
+    if: success() || failure()
+
+    steps:
+      - name: Download Artifacts
+        uses: actions/download-artifact@v3
+        with:
+          path: artifacts
+
+      - name: Publish Test Results
+        uses: EnricoMi/publish-unit-test-result-action/composite@v2
+        with:
+          files: 'artifacts/**/*.xml'
