--- a/package.json
+++ b/package.json
@@ -7,10 +7,17 @@
     "start": "node src/index.js",
     "dev": "env-cmd -f ./config/dev.env nodemon src/index.js",
     "test": "env-cmd -f ./config/test.env jest --watchAll --detectOpenHandles --runInBand --collectCoverage",
-    "action-test": "env-cmd -f ./config/test.env jest --runInBand --collectCoverage"
+    "action-test": "env-cmd -f ./config/test.env jest --runInBand --collectCoverage --ci --reporters=default --reporters=jest-junit"
   },
-  "jest": {
-    "testEnvironment": "node"
+  "jest-junit": {
+    "suiteName": "jest tests",
+    "outputDirectory": "test-results/task-manager",
+    "outputName": "junit.xml",
+    "uniqueOutputName": "false",
+    "classNameTemplate": "{classname}-{title}",
+    "titleTemplate": "{classname}-{title}",
+    "ancestorSeparator": " › ",
+    "usePathForSuiteName": "true"
   },
   "keywords": [],
   "author": "",
@@ -29,7 +36,9 @@
   "devDependencies": {
     "env-cmd": "^10.1.0",
     "jest": "^29.5.0",
+    "jest-junit": "^16.0.0",
     "nodemon": "^2.0.21",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "ts-node": "^10.9.1"
   }
 }
