--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,11 @@ jobs:
         with:
           paths: test-results/**/*.xml
         if: always()
+      - name: Publish Test Report
+        uses: mikepenz/action-junit-report@v3
+        if: success() || failure()
+        with:
+          report_paths: 'test-results/**/*.xml'
 
   # publish-test-results:
   #   name: 'Publish Tests Results'
