--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,10 @@ jobs:
   build-and-test:
     name: 'Build and Test'
     runs-on: self-hosted
+    permissions:
+      contents: read
+      checks: write
+      id-token: write
 
     steps:
       - uses: actions/checkout@v3 #checkout code from repository, so we code downloaded in runner.
