remove test summary

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,11 +27,11 @@ jobs:
       - run: |
           cat config/test.env
       - run: npm run action-test
-      - name: Create test summary
-        uses: test-summary/action@dist
-        with:
-          paths: test-results/**/*.xml
-        if: always()
+      # - name: Create test summary
+      #   uses: test-summary/action@dist
+      #   with:
+      #     paths: test-results/**/*.xml
+      #   if: always()
       - name: Publish Test Report
         uses: mikepenz/action-junit-report@v3
         if: success() || failure()
