--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,8 @@ jobs:
         if: success() || failure()
         with:
           report_paths: 'test-results/**/*.xml'
-          include_passed: 'true'
+          include_passed: true
+          detailed_summary: true
 
   # publish-test-results:
   #   name: 'Publish Tests Results'
